--- a/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -32,163 +32,158 @@ mgt-people-picker .root {
   display: block;
 }
 
-@mixin theme() {
-  @each $theme in $themes {
-    :host .people-picker.mgt-#{$theme},
-    mgt-people-picker .people-picker.mgt-#{$theme} {
-      background-color: map-get($background-color, $theme);
-      @include input__border($theme);
-      &:hover {
-        border-color: map-get($input__border-color--hover, $theme);
-      }
-      &.focused {
-        border-color: map-get($input__border-color--focused, $theme);
-      }
-      padding-bottom: 6px;
+.people-picker {
+  background-color: set-var(background-color, 'light');
+  @include input__border('light');
+  &:hover {
+    border-color: set-var(input__border-color--hover, 'light');
+  }
+  &.focused {
+    border-color: set-var(input__border-color--focused, 'light');
+  }
+  padding-bottom: 6px;
 
-      .selected-list {
-        flex: 1 0 auto;
-        display: flex;
-        flex-wrap: wrap;
-        vertical-align: middle;
-        margin: 0 2px 0 0;
-        list-style-type: none;
-        padding-left: 8px;
-        font-style: normal;
-        font-weight: normal;
+  .selected-list {
+    flex: 1 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    vertical-align: middle;
+    margin: 0 2px 0 0;
+    list-style-type: none;
+    padding-left: 8px;
+    font-style: normal;
+    font-weight: normal;
+    overflow: hidden;
+
+    &__person-wrapper {
+      display: flex;
+      margin: 5px 5px 0px 0;
+      align-items: center;
+      border-radius: 15px;
+      height: 24px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      position: relative;
+      background-color: set-var(selected-person__background-color, 'light');
+
+      &__person {
         overflow: hidden;
+        min-width: 100%;
+        --avatar-size-s: 24px;
+        margin-left: 0px;
+        --color: set-var(color, 'light');
+        color: set-var(color, 'light');
+        margin-bottom: 1px;
+        margin-right: 4px;
+      }
 
-        &__person-wrapper {
-          display: flex;
-          margin: 5px 5px 0px 0;
-          align-items: center;
-          border-radius: 15px;
-          height: 24px;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          position: relative;
-          background-color: map-get($selected-person__background-color, $theme);
+      &__overflow {
+        margin-left: 25px;
 
-          &__person {
-            overflow: hidden;
-            min-width: 100%;
-            --avatar-size-s: 24px;
-            margin-left: 0px;
-            --color: map-get($color, $theme);
-            color: map-get($color, $theme);
-            margin-bottom: 1px;
-            margin-right: 4px;
-          }
-
-          &__overflow {
-            margin-left: 25px;
-
-            &__gradient {
-              content: '';
-              position: absolute;
-              margin-right: 23px;
-              width: 10px;
-              height: 90%;
-              top: 0;
-              right: 0;
-              @include selected-person__overflow($theme);
-            }
-
-            &__close-icon {
-              height: 100%;
-              top: 0;
-              margin-top: 4px;
-              margin-left: 10px;
-              position: absolute;
-              line-height: normal;
-              font-family: 'FabricMDL2Icons';
-              padding-right: 7px;
-              cursor: pointer;
-              right: 0;
-              background-color: map-get($selected-person__background-color, $theme);
-              color: map-get($color, $theme);
-            }
-          }
+        &__gradient {
+          content: '';
+          position: absolute;
+          margin-right: 23px;
+          width: 10px;
+          height: 90%;
+          top: 0;
+          right: 0;
+          @include selected-person__overflow('light');
         }
 
-        .flyout {
-          .search-box {
-            margin: 6px 2px 1px 3px;
+        &__close-icon {
+          height: 100%;
+          top: 0;
+          margin-top: 4px;
+          margin-left: 10px;
+          position: absolute;
+          line-height: normal;
+          font-family: 'FabricMDL2Icons';
+          padding-right: 7px;
+          cursor: pointer;
+          right: 0;
+          background-color: set-var(selected-person__background-color, 'light');
+          color: set-var(color, 'light');
+        }
+      }
+    }
 
-            &.search-box-start {
-              margin: 6px 0px 1px 0px;
-              line-height: normal;
-              margin-inline-start: 0px;
-              margin-inline-end: 0px;
-            }
+    .flyout {
+      .search-box {
+        margin: 6px 2px 1px 3px;
 
-            &__input {
-              box-sizing: border-box;
-              border-width: 0;
-              border-style: none;
-              width: 100%;
-              display: flex;
-              flex: 1 0 auto;
-              font-family: var(--default-font-family, 'Segoe UI');
-              position: relative;
-              line-height: normal;
-              outline: none;
-              font-style: normal;
-              font-weight: normal;
-              font-size: 14px;
-              line-height: 19px;
-              background-color: map-get($background-color, $theme);
-              color: map-get($color, $theme);
-              &::placeholder {
-                color: $placeholder;
-              }
-              &:focus::placeholder {
-                color: map-get($placeholder--focus, $theme);
-              }
-            }
+        &.search-box-start {
+          margin: 6px 0px 1px 0px;
+          line-height: normal;
+          margin-inline-start: 0px;
+          margin-inline-end: 0px;
+        }
+
+        &__input {
+          box-sizing: border-box;
+          border-width: 0;
+          border-style: none;
+          width: 100%;
+          display: flex;
+          flex: 1 0 auto;
+          font-family: var(--default-font-family, 'Segoe UI');
+          position: relative;
+          line-height: normal;
+          outline: none;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 19px;
+          background-color: set-var(background-color, 'light');
+          color: set-var(color, 'light');
+          &::placeholder {
+            color: $placeholder;
           }
+          &:focus::placeholder {
+            color: set-var(placeholder--focus, 'light');
+          }
+        }
+      }
 
-          .flyout-root {
-            padding: 0;
-            border-radius: 2px;
-            min-width: 260px;
-            overflow-y: auto;
-            text-align: left;
-            list-style-type: none;
-            background-color: map-get($dropdown__background-color, $theme);
+      .flyout-root {
+        padding: 0;
+        border-radius: 2px;
+        min-width: 260px;
+        overflow-y: auto;
+        text-align: left;
+        list-style-type: none;
+        background-color: set-var(dropdown__background-color, 'light');
 
-            li {
-              cursor: pointer;
+        li {
+          cursor: pointer;
+        }
+
+        .people-list {
+          .list-person {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            padding: 12px;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 14px;
+            &:hover,
+            &.focused {
+              background-color: set-var(dropdown-item__background-color, light);
             }
+            .people-person-text-area {
+              margin-left: 13px;
+              flex: 1 1 0;
+              max-height: 40px;
+              overflow: hidden;
+              color: set-var(color, 'light');
 
-            .people-list {
-              .list-person {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                padding: 12px;
-                font-style: normal;
-                font-weight: 600;
+              .people-person-text {
                 font-size: 14px;
-                &:hover,
-                &.focused {
-                  background-color: map-get($dropdown-item__background-color, $theme);
-                }
-                .people-person-text-area {
-                  margin-left: 13px;
-                  flex: 1 1 0;
-                  max-height: 40px;
-                  overflow: hidden;
-                  color: map-get($color, $theme);
-
-                  .people-person-text {
-                    font-size: 14px;
-                    font-weight: normal;
-                    margin: 0;
-                    padding: 0;
-                  }
-                }
+                font-weight: normal;
+                margin: 0;
+                padding: 0;
               }
             }
           }
@@ -249,5 +244,3 @@ mgt-people-picker .people-person-job-title {
 mgt-flyout {
   flex: 1 0 auto;
 }
-
-@include theme();
