--- a/packages/mgt/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt/src/components/mgt-login/mgt-login.scss
@@ -119,7 +119,7 @@ mgt-login .popup-command {
 }
 
 [dir='rtl'] {
-  --details-spacing: 0px 6px 0px 0px !important;
+  --details-spacing: 0px 6px 0px 0px;
 }
 .login-icon {
   & + span {
