css necessary to overwrite ltr styles

--- a/packages/mgt/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt/src/components/mgt-login/mgt-login.scss
@@ -119,10 +119,13 @@ mgt-login .popup-command {
 }
 
 [dir='rtl'] {
-  --details-spacing: 0px 6px 0px 0px;
-}
-.login-icon {
-  & + span {
-    margin-right: 6px;
+  --popup-padding: 24px 24px 16px 48px;
+  mgt-person {
+    .details {
+      --details-spacing: 0px 12px 0px 0px;
+      &.small {
+        --details-spacing: 0px 6px 0px 0px;
+      }
+    }
   }
 }
