--- a/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -391,33 +391,40 @@ mgt-flyout {
 @include theme();
 
 [dir='rtl'] {
+  mgt-person {
+    margin: 0px 12px 0px 0px;
+  }
   .selected-list {
-    list-style-type: none;
+    margin-right: 8px !important;
     &__person-wrapper {
-      margin-left: 6px;
+      margin-left: 6px !important;
       &__person {
-        margin-right: 0px;
-        margin-left: 4px;
+        margin-right: 0px !important;
+        margin-left: 4px !important;
       }
       &__overflow {
         &__gradient {
-          right: auto;
-          position: absolute;
-          margin-right: 0px;
-          width: 10px;
+          right: auto !important;
+          position: absolute !important;
+          margin-right: 0px !important;
+          width: 10px !important;
           height: 90%;
           top: 0;
         }
         &__close-icon {
-          right: auto;
-          margin-left: 5px;
-          left: 0px;
+          right: auto !important;
+          margin-left: 5px !important;
+          left: 0px !important;
         }
       }
     }
   }
+  .people-person-text-area {
+    margin-right: 13px;
+    margin-left: 0px !important;
+  }
 
   .flyout-root {
-    text-align: right;
+    text-align: right !important;
   }
 }
