--- a/packages/mgt/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/packages/mgt/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -501,17 +501,15 @@ $dropdown-item-selected-background: var(--dropdown-item-selected-background, #de
     );
   }
   .search-wrapper {
-    margin-right: 0px;
+    margin-right: 0px !important;
   }
   .search-icon {
-    margin-left: 8px;
+    margin-left: 8px !important;
   }
   .channel-display {
-    padding-right: 34px;
-    padding-left: 10px;
+    padding: 0px 34px 0px 10px !important;
   }
   .close-icon {
-    position: absolute;
     right: auto;
     left: 10px;
   }
