fixing tasks and todo rtl + strings

--- a/packages/mgt/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -670,7 +670,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
   }
 
   .TaskDetails {
-    margin-right: 14px;
+    margin-right: 14px !important;
   }
   .TaskIcon {
     margin-left: 8px;
