--- a/packages/mgt/src/components/mgt-tasks/mgt-tasks.scss
+++ b/packages/mgt/src/components/mgt-tasks/mgt-tasks.scss
@@ -696,11 +696,20 @@ mgt-tasks,
     --arrow-options-left: auto;
   }
   mgt-dot-options {
-    --dot-options-translateX: translateX(60px);
+    --dot-options-translateX: translateX(40px);
+  }
+  .TaskCheckContainer {
+    margin: 21px 20px 20px 10px !important;
   }
 
   .TaskDetails {
     margin-right: 14px;
+  }
+  .TaskDetailsContainer {
+    svg {
+      margin-left: 4px !important;
+      margin-right: 0px;
+    }
   }
   .TaskIcon {
     margin-left: 8px;
