--- a/packages/mgt/src/components/sub-components/mgt-arrow-options/mgt-arrow-options.scss
+++ b/packages/mgt/src/components/sub-components/mgt-arrow-options/mgt-arrow-options.scss
@@ -5,10 +5,12 @@
  * -------------------------------------------------------------------------------------------
  */
 
+@import '../../../styles/shared-styles.scss';
+
 :host,
 mgt-arrow-options {
   position: relative;
-  font-family: 'Segoe UI';
+  font-family: var(--default-font-family);
 }
 
 :host .ArrowIcon,
