--- a/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.theme.scss
+++ b/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.theme.scss
@@ -7,7 +7,9 @@
 
 @import '../../styles/shared-styles.scss';
 
+// define theme strings when introducing new themes
 $themes: ('light', 'dark');
+$theme-default: 'light';
 
 // variables with theme colors
 $theme-values: (
