--- a/packages/mgt/src/styles/shared-styles.scss
+++ b/packages/mgt/src/styles/shared-styles.scss
@@ -48,6 +48,26 @@
   content: '\\\EB6D';
 }
 
+/* ---------------Common theming vars / functions / mixins--------------- */
+$themes: ('light', 'dark');
+$theme-default: 'light';
+
+@function set-var($var, $theme, $component) {
+  $theme-value: map-get($component, $var);
+
+  @return var(#{map-get($theme-value, '_var')}, #{map-get($theme-value, $theme)});
+}
+
+@mixin create-themes($component) {
+  @each $theme in $themes {
+    .mgt-#{$theme} {
+      @each $name, $var in $component {
+        #{map-get($var, _var)}: #{map-get($var, $theme)};
+      }
+    }
+  }
+}
+
 /* ---------------Common color variables--------------- */
 $white: #ffffff; /* Neutrals / White #FFFFFF */
 $black: #000000; /* Neutrals / Web / Black #000000 */
