--- a/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -7,7 +7,7 @@
 
 @import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../styles/shared-styles.scss';
-@import '../../styles/theme.scss';
+@import './mgt-people-picker.theme.scss';
 
 // common vars regardless of themes
 $avatar-margin: var(--avatar-margin, 0 4px 0 0);
